methods.basics.Methods.scala.error
Erreur de compilation :
Methods:9: error: illegal start of simple expression
    recule(;)
           ^Methods:9: error: illegal start of statement
    recule(;)
            ^